tests/paczka1/fuzzy1/70456709.err
Error in line 17: xw0 A861 10,4
Error in line 10: bSK6HJy2 S39 15,4
Error in line 21: xw0 A686 73,8
Error in line 32: MzfQCfQhLK AO61 3,1
Error in line 31: MzfQCfQhLK A861 14,0
